Proofreading pass -Fixed typos and grammar -Changed background color to make it easier to read

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <summary>Yoink! Museum Heist</summary>
                 <p>
                     A small party-game made in Unreal Engine 4 as a university project.
-                    As part of team of nineteen people, composed of Designers, Artists, and Engineers, we worked together to create this game in the timeframe of about four months.
+                    As part of team of nineteen people, composed of designers, artists, and engineers, we worked together to create this game in the timeframe of about four months.
                     <br /><br />
                     Of the nineteen, we had only three engineers (of which I was one), so we decided to have the team work in Blueprints so that more team members could contribute to gameplay features.
                     I was tasked with creating backend game systems, such as the Game State system which helped control the appearance of the Lobby level, and the system which set the materials
@@ -91,7 +91,7 @@
                     a simple User Account system with parameterized variables, and salt/hash logins are also implemented.
                     <br /> <br />
                     UI elements are also implemented to display data and game menus. I implemented UI control through custom functions and event handlers which react to Unity UI events.
-                    Other basic gameplay elements are primarily implemented using Unity's editor features (sincey they weren't the focus of the project), such as the player following 3rd person camera, and collision, but
+                    Other basic gameplay elements are primarily implemented using Unity's editor features (since they weren't the focus of the project), such as the player following 3rd person camera, and collision, but
                     C# Interfaces are used for "interactable" game objects, allowing abstracted, reusable code.
                     <br /><br />
                     The entire project can be seen on a github repository as the TeesU-GPP <a target="_blank" href="https://github.com/btbertram/TeesU-GPP">at this link</a>.
@@ -159,8 +159,8 @@
             <details>
                 <summary>EggsCompany</summary>
                 <p>
-                    A turn-based tactical game prototype, made in Unity, as a university project.
-                    As part of a team of three people, we were tasked with creating a game that showed off several AI programming techniques.
+                    A turn-based tactical game prototype made in Unity as a university project.
+                    As part of a team of three people we were tasked with creating a game that showed off several AI programming techniques.
                     My role was to implement pathfinding, and I implemented a node-based A* pathfinding algorithm.
                     Part of this also required implementation of a search system, which was also robust enough to be able to implement other searches,
                     able to provide elements of environmental information to the player and AI necessary for decision making.
