Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>For any business inqueries or general questions, I can be contacted at:</p>
             <ul>
                 <li>Email: <a href="mailto:brennantbertram@gmail.com">brennantbertram@gmail.com</a></li>
-                <li><a target="_blank" href="https://www.linkedin.com/in/brennan-bertram-b52993163/">LinkedIn</a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/brennantbertram">LinkedIn</a></li>
                 <li><a target="_blank" href="https://twitter.com/Brennan_Bertram">Twitter</a></li>
             </ul>
         </div>
